--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -44,7 +44,13 @@
 
     	<div class="sand2">
 	    	<div class="content empty">
-	    		<div class="left"><video width="420" height="315" autoplay muted controls><source src="../mmfiles/escarrilla_intro.mp4" type="video/mp4"></video></iframe></div>
+	    		<div class="left">
+					<video width="420" height="315" autoplay controls>
+						<source src="../mmfiles/escarrilla_intro.mp4" type="video/mp4">
+						<source src="../mmfiles/escarrilla_intro.mp4" type="video/ogg">
+						Your browser does not support the video tag.
+					</video>
+				</div>
 	    		<div><br><h1>Why I Make Videos</h1>
 	        	<p>I started making videos because of Zach King's work. I found out that editing was fun, so I started learning more. I started uploading on YouTube to show my work to the world, and I got around 100 views, which was decent to me.</p></div>
 	        	<div><a class="more" href="posts.html">More Videos +</a></div>
