--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <iframe width="500" height="315" src="https://www.youtube.com/embed/7cfua-Q33ig" class="left"></iframe><br>
         <h1>Mr. Quack</h1>
         <p>This is my channel. I post stuff that I think is either funny or is cool.<br>I have no idea what to upload next.<br></p>
-        <a class="more" href="posts.html">More Videos +</a>
+        <a class="more" href="htdocs/posts.html">More Videos +</a>
       </div>
 
       <div class="content margin-top" id="gallery">
@@ -52,7 +52,7 @@
           <a target="_blank" href="images/preview2.jpg"><img class="picture" src="images/preview2.jpg"></a>
           <a target="_blank" href="images/preview3.jpg"><img class="picture" src="images/preview3.jpg"></a>         
         </div><br>
-        <a class="more" href="gallery.html">More Photos +</a>
+        <a class="more" href="htdocs/gallery.html">More Photos +</a>
       </div>
 
 
