--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -35,9 +35,9 @@
 
 
 
-    	<div class="light-gray row" id="headText">Hello, welcome to the about page</div>
+    	<div class="light-gray" id="headText">Hello, welcome to the about page</div>
 
-  		<div class="margin-top2 row" id="headContent">
+  		<div class="margin-top2" id="headContent">
     		<div class="right"><img width="200px" src="../images/Meep.png"></div>
     		<div><h2>Hi, I'm Luis</h2><p>I was born on the 24th of March, 2005 in Davao City. I have an interest in programming and video editing. I can practically draw and play the piano. The sports I like are chess and basketball.</p></div>
     	</div>
@@ -58,7 +58,7 @@
 	    </div>
 
 
-      <div id="footer">
+      <footer>
 
         <div class="left" id="footer-text">© 2020 by Luis.</div>
 
@@ -68,7 +68,7 @@
           <a class="right" target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><div class="footer-icon hover yt"></div></a>
         </div>
 
-        <div class="center">
+        <footer>
           <a target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><img class="center scaleUp footer-icon" src="../images/Meep.png"></a>
         </div>
         
