--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -35,17 +35,31 @@
 
 
 
-      <div class="light-gray" id="headText">Hello, welcome to the contact page</div>
+      <div class="light-gray" id="headText">Hello, welcome to the contact page<br>There are credits here, too</div>
 
-      <div class="content margin-top2 contact-width row margin-top3 margin-bottom" id="gallery"><br>
+      <div class="content margin-top2 contact-width margin-top3 margin-bottom" id="gallery"><br>
         <h1 class="margin-top3 margin-bottom">You can contact me...</h1>
         <div class="contact">Via Gmail: latescarrilla@gmail.com</div>
         <div class="contact">Via Messenger: <a target="_blank" href="https://www.facebook.com/latescarrilla">facebook.com/latescarrilla</a></div>
         <div class="contact">Via Twitter DMs: <a target="_blank" href="https://www.twitter.com/latesc__">@latesc__</a></div>
       </div>
 
+      <div class="left-align content margin-top2 margin-top3 margin-bottom" id="gallery"><br>
+        <h1 class="margin-top3 margin-bottom center">Credits</h1>
+        <span>
+          <p>McKinnon, J. (2015, May 12). social-media-icons-css-sprite [Illustration]. Wmpu Dev. <a target="blank_" href="https://littlepuddingjustin.wordpress.com/category/enterprise-2-0/">https://littlepuddingjustin.wordpress.com/category/enterprise-2-0/</a></p>
+          <h3>Posts</h3>
+          <p>Escamilla, A. (2013, May 27). <i>Macbook laptop on a desk</i> [Photograph]. Unsplash. <a target="blank_" href="https://unsplash.com/photos/yC-Yzbqy7PY">https://unsplash.com/photos/yC-Yzbqy7PY</a></p>
+          <h3>Gallery</h3>
+          <p>Haupt, M. (2019, August 15). <i>Crystal Bridges Museum of American Art, Bentonville, Arkansas, USA</i> [Photograph]. Unsplash. <a target="blank_" href="https://unsplash.com/photos/VbI0LMaGMlg">https://unsplash.com/photos/VbI0LMaGMlg</a></p>
+          <h3>Contact</h3>
+          <p>Czerwiński, P. (2018, August 18). One of the display units at the Discovery Center of the Centennial Hall. [Photograph]. Unsplash. <a target="blank_" href="https://unsplash.com/photos/-0xCCPIbl3M">https://unsplash.com/photos/-0xCCPIbl3M</a></p>
+        </span>
+      </div>
 
-      <div id="footer" class="margin-top3 ">
+
+
+      <footer>
 
         <div class="left" id="footer-text">© 2020 by Luis.</div>
 
@@ -59,7 +73,7 @@
           <a target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><img class="center scaleUp footer-icon" src="../images/Meep.png"></a>
         </div>
         
-      </div>
+      </footer>
     </body>
 
   </html>
