--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 
-      <div id="footer">
+      <footer>
 
         <div class="left" id="footer-text">© 2020 by Luis.</div>
 
@@ -71,7 +71,7 @@
           <a target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><img class="center scaleUp footer-icon" src="images/Meep.png"></a>
         </div>
         
-      </div>
+      </footer>
     </body>
 
   </html>
