--- a/htdocs/gallery.html
+++ b/htdocs/gallery.html
@@ -35,7 +35,7 @@
 
 
 
-      <div class="light-gray row" id="headText">Hello, welcome to the gallery section <br>I made some art and random images</div>
+      <div class="light-gray" id="headText">Hello, welcome to the gallery section <br>I made some art and random images</div>
 
       <div class="content margin-top2 " id="gallery">
         <br>
@@ -54,7 +54,7 @@
       </div>
 
 
-      <div id="footer">
+      <footer>
 
         <div class="left" id="footer-text">© 2020 by Luis.</div>
 
@@ -68,7 +68,7 @@
           <a target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><img class="center scaleUp footer-icon" src="../images/Meep.png"></a>
         </div>
         
-      </div>
+      </footer>
     </body>
 
   </html>
