--- a/htdocs/posts.html
+++ b/htdocs/posts.html
@@ -63,7 +63,7 @@
       </div>
 
 
-      <div id="footer">
+      <footer>
 
         <div class="left" id="footer-text">© 2020 by Luis.</div>
 
@@ -77,7 +77,7 @@
           <a target="_blank" href="https://www.youtube.com/channel/UCj8v2NhW-mZHDeUR5Z_vs0Q"><img class="center scaleUp footer-icon" src="../images/Meep.png"></a>
         </div>
         
-      </div>
+      </footer>
     </body>
 
   </html>
